# tarea

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  docs.md  flake.nix  todo.md
.github/workflows/: build_nix.yml  ci.yml  git-cliff-action.yml  tests.yml
demo/: vhs.tape
src/: cli.rs  commands.rs  database.rs  display.rs  editor.rs  help.rs  main.rs  paging.rs  types.rs  utils.rs
